[project]
name = "linkedin-job-api"
version = "0.1.0"
authors = [
    { name = "Mikita Sirosh", email = "mikita.sirosh@gmail.com" }
]
requires-python = ">=3.9,<=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "curl-cffi>=0.13.0",
    "lxml>=6.0.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "ruff>=0.12.11",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "linkedin"

[tool.mypy]
strict = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
